# JoshUpscale-benchmark

./: .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md
cmake/: FindTensorRT.cmake  Findonnxruntime.cmake  Findtensorflow.cmake
include/benchmark/: backend.h  benchmark.h  cmdline.h  config.h  data.h  logging.h  png.h  tensor.h  timer.h  utils.h
include/benchmark/backends/: onnxruntime.h  tensorflow.h  tensorrt.h
include/benchmark/onnxruntime/: api.h
include/benchmark/tensorflow/: api.h
include/benchmark/tensorrt/: api.h  calibrator.h  errorRecorder.h  logger.h  profiler.h
scripts/: gpu-monitor.bat  launch.bat
scripts/model/: data_utils.py  onnx_model.py  onnx_model_utils.py  requirenents.txt  tf_layers.py  tf_model.py  tf_model_utils.py  tf_types.py
src/: backend.cc  backend_onnxruntime.cc  backend_tensorflow.cc  benchmark.cc  cmdline.cc  config.cc  data.cc  logging.cc  main.cc  png.cc  tensor.cc  tensorflow_api.cc  utils.cc
src/backends/: onnxruntime.cc  tensorflow.cc  tensorrt.cc
src/tensorflow/: api.cc
src/tensorrt/: profiler.cc
